<resources>
    <string name="app_name">MenUW</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="menuws">MenUWS</string>
    <string name="restaurant">Restaurant</string>
    <string name="food_item">Food Item</string>
    <string name="restaurant_list">Restaurant list</string>
    <string name="food_item_list">Food Item list</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="type_of_cuisine">Type of Cuisine</string>
    <string name="location">Location</string>
    <string name="minimum_order">minimum order</string>
    <string name="save">Save</string>
    <string name="dish_name">Dish Name</string>
    <string name="main_ingredients_use_comma_seperation">Main Ingredients(use comma seperation)</string>
    <string name="price">Price</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="restaurant_type">restaurant type</string>
    <string name="restaurant_location">restaurant location</string>
    <string name="restaurant_type_label">style:</string>
    <string name="location_label">location:</string>
    <string name="minimum_order_label">minimum order:</string>
    <string name="food_item_restaurant">Restaurant:</string>
    <string name="fooditem_restaurant">restaurant name</string>
    <string name="fooditem_mainingredients_label">main ingredients:</string>
    <string name="fooditem_mainingredients_use_comma_seperation">main ingredients main ingredients main ingredients</string>
    <string name="price_label">price:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="restaurant_menu">Food Menu</string>
    <string name="checkout">Checkout</string>
    <string name="order_history">Order History</string>
    <string name="search_food_items_or_restaurants">Search food items or restaurants</string>
    <string name="place_order">Place Order</string>
    <string name="dish">Dish:</string>
    <string name="food_item_placeholder_text">food item</string>
    <string name="total_price">Total Price:</string>
    <string name="click_on_image">add image</string>
</resources>