<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.FoodItemFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/radio_group_food_item_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#00FFFFFF"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/radio_button_create_food_item_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gold"
                android:padding="10dp"
                android:text="@string/create"
                android:textColor="@color/gold"
                android:checked="true"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_update_food_item_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gold"
                android:padding="10dp"
                android:text="@string/update"
                android:textColor="@color/gold"
                android:textSize="16sp"

                />

        </RadioGroup>

        <AutoCompleteTextView
            android:id="@+id/editTextFoodItemDishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dish_name"
            android:inputType="text"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:padding="10dp"
            android:enabled="true"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextFoodItemRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:focusable="true"
            android:hint="@string/restaurant"
            android:inputType="text"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:padding="10dp"
            android:clickable="true"
            android:enabled="true"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextFoodItemMainINgredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_ingredients_use_comma_seperation"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:padding="10dp"
            android:enabled="true"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editTextFoodItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:background="@drawable/edit_text_background"
            android:inputType="numberDecimal"
            android:textColor="@color/gold"
            android:padding="10dp"
            android:enabled="true"
            android:textColorHint="@color/gold"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/food_item_camera_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/ic_camera"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_on_image"
            android:textColor="@color/gold"
            android:backgroundTint="#00000000"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/btnSaveFooditem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/gold"
            android:text="@string/save" />
    </LinearLayout>

</FrameLayout>