<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rv_item_background">

    <TextView
        android:id="@+id/restaurant_name_rv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/restaurant_style_rv_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_type_label"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name_rv_tv"
        />

    <TextView
        android:id="@+id/restaurant_style_rv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_type"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toRightOf="@id/restaurant_style_rv_tv_label"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name_rv_tv"
        />

    <TextView
        android:id="@+id/restaurant_location_rv_tv_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_style_rv_tv"
        />

    <TextView
        android:id="@+id/restaurant_location_rv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_location"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toRightOf="@id/restaurant_location_rv_tv_lable"
        app:layout_constraintTop_toBottomOf="@id/restaurant_style_rv_tv"
        />

    <TextView
        android:id="@+id/restaurant_minimum_order_rv_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_order_label"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_location_rv_tv"
        />

    <TextView
        android:id="@+id/restaurant_minimum_order_rv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_order"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toRightOf="@id/restaurant_minimum_order_rv_tv_label"
        app:layout_constraintTop_toBottomOf="@id/restaurant_location_rv_tv"
        />

    <ImageView
        android:id="@+id/restaurant_image_rv_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:scaleType="centerCrop"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/restaurant_placeholder"
        app:layout_constraintTop_toTopOf="@id/restaurant_name_rv_tv"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>