<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.RestaurantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/create_chk_box"
                style="?android:attr/checkboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textColor="@color/gold"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:buttonTint="@color/gold"
                />

            <CheckBox
                android:id="@+id/update_chk_box"
                style="?android:attr/checkboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textColor="@color/gold"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:buttonTint="@color/gold"
                />



        </LinearLayout>-->

        <RadioGroup
            android:id="@+id/radio_group_restaurant_frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#00FFFFFF"
            android:layout_marginBottom="15dp">

            <RadioButton
                android:id="@+id/radio_button_create_restaurant_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gold"
                android:padding="10dp"
                android:text="@string/create"
                android:textColor="@color/gold"
                android:checked="true"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_button_update_restaurant_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/gold"
                android:padding="10dp"
                android:text="@string/update"
                android:textColor="@color/gold"
                android:textSize="16sp"

                />

        </RadioGroup>

        <AutoCompleteTextView
            android:id="@+id/autoCompleteRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/restaurant_name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/gold"
            android:enabled="true"
            android:textColorHint="@color/gold" />

        <!--<EditText
            android:id="@+id/editTextRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/restaurant_name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/gold"
            android:enabled="true"
            android:textColorHint="@color/gold" />-->

        <EditText
            android:id="@+id/editTextRestaurantStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/type_of_cuisine"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/gold"
            android:enabled="true"
            android:textColorHint="@color/gold" />

        <EditText
            android:id="@+id/editTextRestaurantLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/location"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/gold"
            android:enabled="true"
            android:textColorHint="@color/gold" />

        <EditText
            android:id="@+id/editTextRestaurantMinOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/minimum_order"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/gold"
            android:enabled="true"
            android:textColorHint="@color/gold" />

        <ImageView
            android:id="@+id/restaurant_camera_iv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="20dp"
            android:backgroundTint="#00000000"
            android:src="@drawable/ic_camera"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_on_image"
            android:textColor="@color/gold"
            android:backgroundTint="#00000000"
            android:layout_marginBottom="20dp"
            />


        <Button
            android:id="@+id/btnSaveRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gold"
            android:text="@string/save"
            android:textColor="@color/black" />
    </LinearLayout>

</FrameLayout>