<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rv_item_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/fooditem_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/fooditem_restaurant_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_item_restaurant"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fooditem_name_tv"
        />

    <TextView
        android:id="@+id/fooditem_restaurant_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fooditem_restaurant"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toRightOf="@id/fooditem_restaurant_tv_label"
        app:layout_constraintTop_toBottomOf="@id/fooditem_name_tv"
        />

    <TextView
        android:id="@+id/fooditem_mainingredients_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fooditem_mainingredients_label"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fooditem_restaurant_tv_label"
        />

    <TextView
        android:id="@+id/fooditem_mainingredients_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fooditem_mainingredients_use_comma_seperation"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:maxLines="1"
        android:maxEms="8"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toRightOf="@id/fooditem_mainingredients_tv_label"
        app:layout_constraintTop_toBottomOf="@id/fooditem_restaurant_tv"
        />

    <TextView
        android:id="@+id/fooditem_price_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_label"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fooditem_mainingredients_tv"
        />

    <TextView
        android:id="@+id/fooditem_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="12sp"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:textColor="@color/gold"
        app:layout_constraintLeft_toRightOf="@id/fooditem_price_tv_label"
        app:layout_constraintTop_toBottomOf="@id/fooditem_mainingredients_tv"
        />

    <ImageView
        android:id="@+id/fooditem_image_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:scaleType="centerCrop"
        android:padding="5dp"
        android:adjustViewBounds="true"
        android:src="@drawable/restaurant_placeholder"
        app:layout_constraintTop_toTopOf="@id/fooditem_name_tv"
        app:layout_constraintRight_toLeftOf="@id/number_picker"
        />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="36dp"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:background="@color/gold"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:backgroundTint="@color/gold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_button"
        />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_add" />

</androidx.constraintlayout.widget.ConstraintLayout>